[package]
name = "clown"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "approximation of capture-by-closure lambdas"
readme = "README.md"
repository = "https://github.com/GRDigital/clown"
authors = ["GR Digital <contact@grdigital.co.uk>"]

[lib]
proc-macro = true

[dependencies]
itertools = "0.11"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit-mut", "full", "parsing", "printing", "proc-macro"], default-features = false }
